[KAIZEN-0] bytte til hamcrest hvor deprecated junit metoder ble brukt